--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@ html {
   box-sizing: inherit;
 }
 
-.body {
+#root {
   font-family: 'Montserrat', sans-serif;
   background-image: url("../images/currency.jpg");
   opacity: .5;
