--- a/src/index.css
+++ b/src/index.css
@@ -1,15 +1,23 @@
 html {
   box-sizing: border-box;
+
+
 }
 *, ::before, ::after {
   box-sizing: inherit;
 }
 
 #root {
-  font-family: 'Montserrat', sans-serif;
-  background-image: url("../images/currency.jpg");
-  opacity: .5;
-  min-height: 100vh;
+  background-image: url("../images/currency.jpg" );
   background-size: cover; 
   background-position: center;
+  min-height: 100vh;
+  font-family: Verdana, Tahoma, sans-serif;
+  backdrop-filter: blur(2px);
 }
+
+
+
+
+
+
