--- a/src/Form/style.css
+++ b/src/Form/style.css
@@ -7,3 +7,14 @@
     background-color: rgb(109, 152, 147);
     margin-top: 10px;
 }
+
+.fieldset__legend {
+    border: 1px solid black;
+    border-radius: 15px;
+    max-width: 500px;
+    margin: 10px;
+    padding: 10px;
+    background-color: rgb(246, 246, 120);
+    color: black;
+    font-weight: bold;
+}
