--- a/src/index.css
+++ b/src/index.css
@@ -1,20 +1,23 @@
 html {
   box-sizing: border-box;
-
-
 }
+
 *, ::before, ::after {
   box-sizing: inherit;
 }
 
 #root {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-height: 100vh;
   background-image: url("../images/currency.jpg" );
   background-size: cover; 
   background-position: center;
-  min-height: 100vh;
+  backdrop-filter: blur(5px);
   font-family: Verdana, Tahoma, sans-serif;
-  backdrop-filter: blur(2px);
 }
+
 
 
 
