--- a/src/Form/style.css
+++ b/src/Form/style.css
@@ -29,3 +29,39 @@
     max-width: 200px;
     display: inline-block;
 }
+
+.fieldset__button {
+    background-color: rgb(246, 246, 120); 
+    color: black;
+    border: 1px solid black;
+    border-radius: 15px;
+    width: 100%;
+    max-width: 700px;
+    margin: 10px;
+    padding: 10px;
+    margin-inline: 5px; 
+    font-weight: bold;
+    transition: background 0.3s;
+}
+
+.fieldset__button:hover {
+    background-color: hsl(60, 32%, 44%);
+    transition: 0.5s;
+    scale: 1.05;
+}
+
+.fieldset__button:active {
+    background-color: hsl(60, 43%, 47%);
+    color: black;
+    box-shadow: 4px 5px 6px gray;
+    transition: 0.5s;
+    scale: 1.08;
+}
+
+.fieldset__output {
+    padding: 10px;
+    border: 1px solid black;
+    border-radius: 15px;
+    max-width: 200px;
+    background-color: azure;
+}
