--- a/src/Form/style.css
+++ b/src/Form/style.css
@@ -1,7 +1,8 @@
-
-.fieldset {
+.form {
     flex-basis: 550px;
     margin: 0 auto;
+}
+.fieldset {
     border: 1px solid black;
     border-radius: 15px;
     background-color: rgb(109, 152, 147);
